--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -48,7 +48,7 @@ ifeval::[{suma-content} == true]
 The products you need for this procedure are:
 
 [[debian-channels-wizard]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Debian Products - WebUI
 |===
 | OS Version  | Product Name
@@ -62,7 +62,7 @@ Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
 [[debian-channels-cli]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Debian Channels - CLI
 |===
 | OS Version  | Product Name
