--- a/modules/client-configuration/pages/clients-opensuse.adoc
+++ b/modules/client-configuration/pages/clients-opensuse.adoc
@@ -39,7 +39,7 @@ Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
 [[centos-channels-cli]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .OpenSUSE Channels - CLI
 |===
 | OS Version | Base Channel
