--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -43,7 +43,7 @@ Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
 [[oracle-channels-suma-cli]]
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Oracle Channels - CLI
 |===
 | OS Version | Base Channel
