--- a/modules/reference/pages/cli-mgrcfg.adoc
+++ b/modules/reference/pages/cli-mgrcfg.adoc
@@ -6,7 +6,7 @@ The `mgrcfg` CLI tool has three components:
 
 [[mgrcfg-components]]
 .Configuration CLI Tool Components
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 | Tool name | Installed on | Use for
 | ``mgrcfg-client`` | Client | Managing client configuration
@@ -49,7 +49,7 @@ mgr-actions-control [-h] [--version] [-v] [--option]
 
 [[mgractionscontrol-options]]
 .Action Control Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -208,7 +208,7 @@ The available options for ``mgrcfg-client get`` are listed in this table.
 
 [[mgrcfg-client-get-options]]
 .Client Get Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -302,7 +302,7 @@ The available options for ``mgrcfg-client verify`` are listed in this table.
 
 [[mgrcfg-client-verify-options]]
 .Client Verify Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -402,7 +402,7 @@ The available options for ``mgrcfg-manager add`` are listed in this table.
 
 [[mgrcfg-manager-add-options]]
 .Manager Add Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -481,7 +481,7 @@ The available options for ``mgrcfg-manager diff`` are listed in this table.
 
 [[mgrcfg-manager-diff-options]]
 .Manager Diff Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -542,7 +542,7 @@ The available options for ``mgrcfg-manager diff-revision`` are listed in this ta
 
 [[mgrcfg-manager-diffrevision-options]]
 .Manager Diff Revision Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -584,7 +584,7 @@ The available options for ``mgrcfg-manager download-channel`` are listed in this
 
 [[mgrcfg-manager-downloadchannel-options]]
 .Manager Download Channel Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -634,7 +634,7 @@ The available options for ``mgrcfg-manager list`` are listed in this table.
 
 [[mgrcfg-manager-list-options]]
 .Manager List Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -698,7 +698,7 @@ The available options for ``mgrcfg-manager remove`` are listed in this table.
 
 [[mgrcfg-manager-remove-options]]
 .Manager Remove Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -780,7 +780,7 @@ The available options for ``mgrcfg-manager update`` are listed in this table.
 
 [[mgrcfg-manager-update-options]]
 .Manager Update Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
@@ -835,7 +835,7 @@ The available options for ``mgrcfg-manager upload-channel`` are listed in this t
 
 [[mgrcfg-manager-uploadchannel-options]]
 .Manager Upload Channel Mode Options
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Option
