--- a/modules/reference/pages/systems/system-details/sd-properties.adoc
+++ b/modules/reference/pages/systems/system-details/sd-properties.adoc
@@ -5,7 +5,7 @@ The menu:Systems[Details > Properties] section allows you to edit details about 
 
 [[sdproperties-sysdetails-settings]]
 .Edit System Details Settings
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 |===
 
 | Setting Name
