--- a/modules/reference/pages/systems/system-groups.adoc
+++ b/modules/reference/pages/systems/system-groups.adoc
@@ -10,7 +10,7 @@ Click the icon to see more information about the updates available.
 
 
 [[update-status-icons]]
-[cols="1,1,1", options="header"]
+[cols="1,1,1", options="header",separator=|]
 .Update Status Icons
 |===
 
