--- a/modules/retail/pages/retail-requirements.adoc
+++ b/modules/retail/pages/retail-requirements.adoc
@@ -86,7 +86,7 @@ endif::[]
 
 == POS Terminal Requirements
 
-[cols="1,1", options="header"]
+[cols="1,1", options="header",separator=|]
 .Hardware Requirements for Terminals
 |===
 | Hardware                 | Recommended
