--- a/modules/retail/pages/retail-uyuni-server-setup.adoc
+++ b/modules/retail/pages/retail-uyuni-server-setup.adoc
@@ -92,7 +92,7 @@ Before you register {productname} branch servers and terminals to your {productn
 The products you need for this procedure are:
 
 [[opensuse-channels-cli]]
-[cols="1,1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header",separator=|]
 .OpenSUSE Channels - CLI
 |===
 
