various tweaks to pdfs

--- a/modules/ROOT/pages/pdfs/_uyuni_installation_guide.adoc
+++ b/modules/ROOT/pages/pdfs/_uyuni_installation_guide.adoc
@@ -1,5 +1,6 @@
 = Installation Guide: {productname} {productnumber}
 //include::./branding/pdf/entities.adoc[]
+:doctitle: Installation Guide: {productname} {productnumber}
 :toc: auto
 :toclevels: 4
 :doctype: book
