--- a/modules/ROOT/pages/pdfs/_uyuni_quickstart-public-cloud_guide.adoc
+++ b/modules/ROOT/pages/pdfs/_uyuni_quickstart-public-cloud_guide.adoc
@@ -1,5 +1,6 @@
 = Quickstart Public Cloud Guide: {productname} {productnumber}
 //include::./branding/pdf/entities.adoc[]
+:doctitle: Quickstart Public Cloud Guide: {productname} {productnumber}
 :toc: auto
 :toclevels: 4
 :doctype: book
