--- a/modules/ROOT/pages/pdfs/_uyuni_administration_guide.adoc
+++ b/modules/ROOT/pages/pdfs/_uyuni_administration_guide.adoc
@@ -1,5 +1,6 @@
 = Administration Guide: {productname} {productnumber}
 //include::./branding/pdf/entities.adoc[]
+:doctitle: Administration Guide: {productname} {productnumber}
 :toc: auto
 :toclevels: 4
 :doctype: book
