--- a/modules/ROOT/pages/pdfs/_uyuni_client-configuration_guide.adoc
+++ b/modules/ROOT/pages/pdfs/_uyuni_client-configuration_guide.adoc
@@ -1,5 +1,6 @@
 = Client Configuration Guide: {productname} {productnumber}
 //include::./branding/pdf/entities.adoc[]
+:doctitle: Client Configuration Guide: {productname} {productnumber}
 :toc: auto
 :toclevels: 4
 :doctype: book
