--- a/modules/ROOT/pages/pdfs/_uyuni_reference_guide.adoc
+++ b/modules/ROOT/pages/pdfs/_uyuni_reference_guide.adoc
@@ -1,5 +1,6 @@
 = Reference Guide: {productname} {productnumber}
 //include::./branding/pdf/entities.adoc[]
+:doctitle: Reference Guide: {productname} {productnumber}
 :toc: auto
 :toclevels: 4
 :doctype: book
