--- a/modules/ROOT/pages/pdfs/_uyuni_retail_guide.adoc
+++ b/modules/ROOT/pages/pdfs/_uyuni_retail_guide.adoc
@@ -1,5 +1,6 @@
 = Retail Guide: {productname} {productnumber}
 //include::./branding/pdf/entities.adoc[]
+:doctitle: Retail Guide: {productname} {productnumber}
 :toc: auto
 :toclevels: 4
 :doctype: book
